--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>SmartSlide</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css" />
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css" /> -->
 </head>
 
 <body>
@@ -19,38 +19,36 @@
                     <div id="navbarMenuHeroA" class="navbar-menu">
                         <div class="navbar-end">
                             {% if current_user.is_authenticated %}
-                            <a href="{{ url_for('main.index') }}" class="navbar-item">
-                                Dashboard
-                            </a>
-                            
-                            {% if current_user.is_instructor %}
-                            <a href="{{ url_for('main.newcourse') }}" class="navbar-item">
-                                New course
-                            </a>
-                            {% endif %}
-                            {% if not current_user.is_instructor %}
-                            <a href="{{ url_for('main.enrollcourse') }}" class="navbar-item">
-                                Enroll in a course
-                            </a>
-                            {% endif %}
-
-                            <a href="{{ url_for('main.profile') }}" class="navbar-item">
-                                Profile
-                            </a>
-                            <a href="{{ url_for('auth.logout') }}" class="navbar-item">
-                                Logout
-                            </a>
+                                <a href="{{ url_for('main.index') }}" class="navbar-item">
+                                    Dashboard
+                                </a>
+                                {% if current_user.is_instructor %}
+                                    <a href="{{ url_for('main.newcourse') }}" class="navbar-item">
+                                        New course
+                                    </a>
+                                {% endif %}
+                                {% if not current_user.is_instructor %}
+                                    <a href="{{ url_for('main.enrollcourse') }}" class="navbar-item">
+                                        Enroll in a course
+                                    </a>
+                                {% endif %}
+                                <a href="{{ url_for('main.profile') }}" class="navbar-item">
+                                    Profile
+                                </a>
+                                <a href="{{ url_for('auth.logout') }}" class="navbar-item">
+                                    Logout
+                                </a>
                             {% endif %}
                             {% if not current_user.is_authenticated %}
-                            <a href="{{ url_for('main.index') }}" class="navbar-item">
-                                Home
-                            </a>
-                            <a href="{{ url_for('auth.login') }}" class="navbar-item">
-                                Login
-                            </a>
-                            <a href="{{ url_for('auth.signup') }}" class="navbar-item">
-                                Sign Up
-                            </a>
+                                <a href="{{ url_for('main.index') }}" class="navbar-item">
+                                    Home
+                                </a>
+                                <a href="{{ url_for('auth.login') }}" class="navbar-item">
+                                    Login
+                                </a>
+                                <a href="{{ url_for('auth.signup') }}" class="navbar-item">
+                                    Sign Up
+                                </a>
                             {% endif %}
                         </div>
                     </div>
