Add lecture slides

--- a/project/templates/new_lecture.html
+++ b/project/templates/new_lecture.html
@@ -27,7 +27,7 @@
 
             <div class="field">
                 <div class="control">
-                    <label for="video">Lecture video</label>
+                    <label for="video">Lecture video (mp4)</label>
                     <input class="input is-large" type="file" id="video" name="video" autofocus="">
                 </div>
             </div>
