--- a/project/templates/course_page.html
+++ b/project/templates/course_page.html
@@ -1,6 +1,13 @@
 {% extends "base.html" %}
 
 {% block content %}
+{% with messages = get_flashed_messages() %}
+  {% if messages %}
+      <div class="notification is-danger">
+          {{ messages[0] }}
+      </div>
+  {% endif %}
+{% endwith %}
 <h1 class="title">
     {{course.name}}
 </h1>
@@ -18,7 +25,7 @@
 {% for lecture in lectures %}
 <br>
 <article class="tile is-vertical notification is-warning">
-    <a href=''>
+    <a href='/lecture/{{lecture.id}}'>
       <p class="title">{{lecture.lecture_no}}</p>
       <p class="subtitle">{{lecture.name}}</p>
 </a>
