--- a/project/templates/profile.html
+++ b/project/templates/profile.html
@@ -1,6 +1,13 @@
 {% extends "base.html" %}
 
 {% block content %}
+{% with messages = get_flashed_messages() %}
+  {% if messages %}
+      <div class="notification is-danger">
+          {{ messages[0] }}
+      </div>
+  {% endif %}
+{% endwith %}
 <div class='columns is-centered'>
   <div class='column is-half has-text-centered'>
 <h1>Profile</h1>
