Change audio to wav

--- a/project/templates/slide_page.html
+++ b/project/templates/slide_page.html
@@ -28,7 +28,7 @@
 <img src='{{ slide.image_path }}'>
 
 <audio controls>
-    <source src='{{ slide.audio_path }}' type='audio/mpeg'>
+    <source src='{{ slide.audio_path }}' type='audio/wav'>
 </audio>
 
 <p>{{slide.subtitles}}</p>
